fix: remove overflow aside tag

--- a/style/index.css
+++ b/style/index.css
@@ -424,5 +424,6 @@ footer {
     position: relative;
     justify-content: center;
     flex-direction: row;
+    width: 90vw;
   }
 }
